Changelog
---------

1.1.0 (April 20th 2008)
~~~~~~~~~~~~~~~~~~~~~~~

* Fixed dodgy test in test_iterate.py that was dependent on semantics of 
  default workflow.
  [optilude]

* Fixed i18n markup and updated some messages. This closes
  http://dev.plone.org/plone/ticket/7958.
  [hannosch]

* Updated i18n:domain in templates to the plone domain. There's no need for a
  iterate domain.
  [hannosch]

* Use README.txt and HISTORY.txt for the package's long description.
  [wichert]

* Remove unneeded intialize method from __init__
  [wichert]

1.0
~~~

* First release